
  [ Robert Millan ]
  * 10_non_kfreebsd.diff: Make freebsd-make usable on non-kFreeBSD
    systems.  (Closes: #602768)

  [ Guillem Jover ]
  * Now using Standards-Version 3.9.2 (no changes needed).
  * Switch to source format “3.0 (quilt)”.
    - Remove quilt from Build-Depends.
    - Remove patch target in debian/rules.
    - Remove now unneeded README.source.
    - Refresh all patches.

 -- Robert Millan <rmh@debian.org>  Thu, 13 Jan 2011 18:29:12 +0100

freebsd-buildutils (8.1-1) unstable; urgency=low

  [ Petr Salinger ]
  * New upstream version (RELENG_8_1_0_RELEASE)

  [ Aurelien Jarno ]
  * Update debian/copyright.
  * Bumped Standard-Versions to 3.9.1 (no changes).

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 29 Jul 2010 21:33:33 +0200

freebsd-buildutils (8.0-1) unstable; urgency=low

  [ Petr Salinger ]
  * New upstream version (RELENG_8_0_0_RELEASE)
  * Add a get-orig-source target to debian/rules and
       stop using a tar in tar system.
  * Use quilt for patches management

  [ Aurelien Jarno ]
  * Add a README.source.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 12 Apr 2010 23:53:50 +0200

freebsd-buildutils (7.2-2) unstable; urgency=low

  * Remove part of the automatic patches in favor of patches.
  * Use libbsd instead of hacked funtions (Closes: #379259).
  * Use <bsd/sys/*.h> includes instead of <bsd/*.h>.
  * Remove depends on dash, it is now essential.
  * Add depends on ${misc:Depends}.
  * Bumped Standard-Versions to 3.8.4 (no changes).
  * Handle nostrip build options (Closes: #436857).

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 10 Apr 2010 16:49:49 +0200

freebsd-buildutils (7.2-1) unstable; urgency=low

  [ Petr Salinger ]
  * New upstream version (RELENG_7_2_0_RELEASE)

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 06 May 2009 09:03:20 +0200

freebsd-buildutils (7.1-2) unstable; urgency=low

  * patches/15_manpages_gzip.diff: new patch to gzip manpages with -9 by
    default, as required on Debian systems.