@@ -11,6 +11,7 @@ freebsd-buildutils (8.2-1) UNRELEASED; urgency=low
     - Remove patch target in debian/rules.
     - Remove now unneeded README.source.
     - Refresh all patches.
+  * Use -C option for pmake instead of manually changing dir.
 
  -- Robert Millan <rmh@debian.org>  Thu, 13 Jan 2011 18:29:12 +0100
 
